--- a/src/app/components/fruittopbar/fruittopbar.component.html
+++ b/src/app/components/fruittopbar/fruittopbar.component.html
@@ -13,8 +13,8 @@
                   <a href="tel:584147529202" style="cursor: pointer;"><i class="ti-mobile"></i> <span>(414) 752 9202</span></a>
                 </li>
                 <li>
-                   <a href="mailto:soporte@frutme.com">soporte@frutme.com</a>
-                  <!-- <a ><i class="ti-email"></i> <span>soporte@frutme.com</span></a> -->
+                   <a href="mailto:soporte@lameseria.com">soporte@lameseria.com</a>
+                  <!-- <a ><i class="ti-email"></i> <span>soporte@lameseria.com</span></a> -->
                 </li>
               </ul>
             </div>
