--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<!-- <app-fruittopbar></app-fruittopbar> -->
+<app-topbar></app-topbar>
 <router-outlet></router-outlet>
-<!-- <app-fruitfooter></app-fruitfooter> -->
+<app-footer></app-footer>
 
 
 	
