--- a/src/app/components/topbar/topbar.component.html
+++ b/src/app/components/topbar/topbar.component.html
@@ -4,7 +4,7 @@
           <p><span><i class="pe-7s-call"></i> +56 9 659 99 44</span><span><i class="pe-7s-mail"></i><a href="#"> <span class="__cf_email__" data-cfemail="e6858a879383a682898b878f88c885898b">contacto@lameseria.cl</span></a></span></p>
         </div>
         <div class="header__center">
-          <p>Summer sale discount off <span>50%!</span><a href="shop-4-column.html"> Shop Now</a></p>
+          <p>¡Oferta de invierno descuento de<span> 20%!</span><a href="shop-4-column.html"> Compra ahora</a></p>
         </div>
         <div class="header__right">
           <!-- <div class="ps-dropdown"><a href="index.html#">USD</a>
@@ -40,7 +40,7 @@
           <p><span><i class="pe-7s-call"></i> +56 9 659 99 44</span><span><i class="pe-7s-mail"></i><a href="#"> <span class="__cf_email__" data-cfemail="ddbeb1bca8b89db9b2b0bcb4b3f3beb2b0">[ contacto@lameseria.cl ]</span></a></span></p>
         </div>
         <div class="header__center">
-          <p>Summer sale discount off <span>50%!</span><a href="shop-4-column.html"> Shop Now</a></p>
+          <p>¡Oferta de invierno descuento de<span> 20%!</span><a href="shop-4-column.html"> Compra ahora</a></p>
         </div>
         <div class="header__right">
           <!-- <div class="ps-dropdown"><a href="index.html#">USD</a>
