--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -5,22 +5,19 @@
             <div class="col-xl-3 col-lg-12 col-md-12 col-sm-12  ">
               <div class="ps-site-info"><a class="ps-logo" href="index.html#"><img src="assets/assetslameseria/img/logo.png" alt=""></a>
                 <figure>
-                  <p><i class="pe-7s-map-marker"></i> 184 Main Rd E, St Albans <br> Santiago, Chile</p>
+                  <p><i class="pe-7s-map-marker"></i> Santiago, Chile</p>
                   <p><i class="pe-7s-mail"></i><a href="../../cdn-cgi/l/email-protection#b7d4d8d9c3d6d4c3f7d4d8dac7d6d9ce99d4d8da"><span class="__cf_email__" data-cfemail="e1828e8f95808295a1828e8c91808f98cf828e8c">[contacto@lameseria.cl]</span></a></p>
                   <p><i class="pe-7s-call"></i> 56 9 659 99 44</p>
                 </figure>
                 <ul class="ps-list--social">
                   <li><a href="index.html#"><i class="fa fa-facebook"></i></a></li>
-                  <li><a href="index.html#"><i class="fa fa-twitter"></i></a></li>
-                  <li><a href="index.html#"><i class="fa fa-google-plus"></i></a></li>
-                  <li><a href="index.html#"><i class="fa fa-instagram"></i></a></li>
-                  <li><a href="index.html#"><i class="fa fa-pinterest"></i></a></li>
+                  <li><a href="https://www.instagram.com/lameseria.cl/" target="_blanck"><i class="fa fa-instagram"></i></a></li>
                 </ul>
               </div>
             </div>
             <div class="col-xl-6 col-lg-12 col-md-12 col-sm-12  ">
               <div class="row">
-                <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-6 ">
+               <!--  <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-6 ">
                   <div class="widget widget_footer">
                     <h3 class="widget-title">Categories</h3>
                     <ul>
@@ -32,28 +29,23 @@
                       <li><a href="shop-4-column.html">Dress</a></li>
                     </ul>
                   </div>
-                </div>
-                <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-6 ">
+                </div> -->
+                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-4 col-6 ">
                   <div class="widget widget_footer">
-                    <h3 class="widget-title">Infomation</h3>
+                    <h3 class="widget-title">Información</h3>
                     <ul>
-                      <li><a href="#">About Us</a></li>
-                      <li><a href="#">Contact Us</a></li>
-                      <li><a  href="#">Terms & Conditions</a></li>
-                      <li><a  href="#">Returns & Exchanges</a></li>
-                      <li><a  href="#">Shipping & Delivery</a></li>
-                      <li><a  href="#">Privacy Policy</a></li>
+                      <li><a href="#">Sobre nosotros</a></li>
+                      <li><a href="#">Contacto</a></li>
+                      <li><a href="#">Terms & Conditions</a></li>
                     </ul>
                   </div>
                 </div>
-                <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-6 ">
+                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-4 col-6 ">
                   <div class="widget widget_footer">
-                    <h3 class="widget-title">Quick Links</h3>
+                    <h3 class="widget-title">Enlaces de interes</h3>
                     <ul>
-                      <li><a href="index.html#">Store Location</a></li>
-                      <li><a href="#">My Account</a></li>
+                      <li><a href="#">My cuenta</a></li>
                       <li><a href="#">Orders Tracking</a></li>
-                      <li><a href="#">Size Guide</a></li>
                       <li><a href="#">FAQs</a></li>
                     </ul>
                   </div>
@@ -62,10 +54,10 @@
             </div>
             <div class="col-xl-3 col-lg-12 col-md-12 col-sm-12 col-12 ">
               <form class="ps-form--subscribe-footer" action="#" method="post">
-                <p>Subscribe to our newsletter and get 10% off your first purchase</p>
+                <p>Suscríbase a nuestro boletín y obtenga un descuento en su primera compra</p>
                 <div class="form-group">
                   <input class="form-control" type="text" placeholder="Your EmaiL Address">
-                  <button>Subscribe</button>
+                  <button>Suscribete</button>
                 </div><img src="assets/assetslameseria/img/payment2.png" alt="">
               </form>
             </div>
@@ -75,17 +67,17 @@
       <div class="ps-footer__copyright">
         <div class="container">
           <div class="row">
-            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 ">
-              <p>Copyright © 2020 <a href="index.html#">La meseria</a> all rights reserved. Powered by <a href="index.html#">Tuw3bsite</a></p>
+            <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 ">
+              <p>Copyright © 2020 <a href="index.html#">La meseria</a> Todos los derechos reservados. Desarrollado por <a href="http://www.tuw3bsite.com.ve" target="_blanck">Tuw3bsite</a></p>
             </div>
-            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 ">
+            <!-- <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 ">
               <ul class="ps-footer__nav">
                 <li><a href="index.html#">Shop</a></li>
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Contact</a></li>
                 <li><a href="#">Blog</a></li>
               </ul>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
