--- a/src/app/components/testapp/testapp.component.html
+++ b/src/app/components/testapp/testapp.component.html
@@ -32,7 +32,7 @@
               <div class="container"><img src="assets/assetslameseria/img/home-banner/home-1/1.png" alt="">
                 <div class="ps-banner__content">
                   <h5>Spring - Summer 2018</h5>
-                  <h1>BEST OF COLLECTION!</h1>
+                  <h1>ZONA DE BANNERS</h1>
                   <p>Duis aute irure dolor in reprehenderit in voluptate velit essecillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat nonproident</p><a class="ps-btn ps-btn--outline ps-btn--black" href="index.html#">Shop Now</a>
                 </div>
               </div>
@@ -43,7 +43,7 @@
               <div class="container"><img src="assets/assetslameseria/img/home-banner/home-1/2.png" alt="">
                 <div class="ps-banner__content">
                   <h5>2018 New Arrivals</h5>
-                  <h1>SALE OFF! UP TO 70%</h1>
+                <h1>ZONA DE BANNERS</h1>
                   <p>Duis aute irure dolor in reprehenderit in voluptate velit essecillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat nonproident</p><a class="ps-btn ps-btn--outline ps-btn--black" href="index.html#">Shop Now</a>
                 </div>
               </div>
@@ -54,7 +54,7 @@
               <div class="container"><img src="assets/assetslameseria/img/home-banner/home-1/3.png" alt="">
                 <div class="ps-banner__content">
                   <h4>Summer 2018</h4>
-                  <h1>Flash Sale</h1><a class="ps-btn ps-btn--outline ps-btn--black" href="index.html#">Shop Now</a>
+          <h1>ZONA DE BANNERS</h1><a class="ps-btn ps-btn--outline ps-btn--black" href="index.html#">Shop Now</a>
                 </div>
               </div>
             </div>
