--- a/src/app/components/productdetail/productdetail.component.html
+++ b/src/app/components/productdetail/productdetail.component.html
@@ -4,11 +4,11 @@
         <ul class="breadcrumb">
           <li><a routerLink="/products">Todos los productos</a></li>
        <!--    <li><a href="shop-4-column.html">Jewellery</a></li> -->
-          <li *ngIf="tix">{{tix.productName}}</li>
+          <li *ngIf="_uw.tixPreview">{{_uw.tixPreview.productName}}</li>
         </ul>
       </div>
     </div>
-    <div class="container"  *ngIf="tix">
+    <div class="container"  *ngIf="_uw.tixPreview">
       <div class="ps-product--detail">
         <div class="ps-product__header">
           <div class="ps-product__thumbnail" data-vertical="true">
@@ -16,9 +16,9 @@
               <div class="ps-wrapper">
                 <div class="ps-product__gallery" data-arrow="true">
 
-                  <div class="item" *ngFor="let image of tix.images; index as f">
-                    <a href="{{tix.images[f]}}">
-                      <img src="{{tix.images[f]}}" alt="">
+                  <div class="item" *ngFor="let image of _uw.tixPreview.images; index as f">
+                    <a href="{{_uw.tixPreview.images[f]}}">
+                      <img src="{{_uw.tixPreview.images[f]}}" alt="">
                     </a>
                   </div>
 
@@ -29,23 +29,25 @@
             </figure>
             <div class="ps-product__variants" data-item="4" data-md="3" data-sm="3" data-arrow="false">
               
-              <div class="item" *ngFor="let image of tix.images; index as f" ><img src="{{tix.images[f]}}" alt=""></div>
+              <div class="item" *ngFor="let image of _uw.tixPreview.images; index as f" ><img src="{{_uw.tixPreview.images[f]}}" alt=""></div>
 
    
             </div>
           </div>
           <div class="ps-product__info">
-            <h1>{{tix.productName}}</h1>
-            <h4 class="ps-product__price">CLP {{tix.globalPrice}}</h4>
+            <h1>{{_uw.tixPreview.productName}}</h1>
+            <h4 class="ps-product__price">CLP {{_uw.tixPreview.globalPrice}}</h4>
             <div class="ps-product__desc">
-              <p>{{tix.description}}</p>
+              <p>{{_uw.tixPreview.description}}</p>
             </div>
             <div class="ps-product__shopping">
               <div class="form-group--number">
                 <button class="up"><i class="fa fa-plus"></i></button>
                 <button class="down"><i class="fa fa-minus"></i></button>
                 <input class="form-control" type="text" placeholder="1">
-              </div><a class="ps-btn" href="product-standard.html#">Agregar al carro</a><a class="ps-product__favorite" href="product-standard.html#"><i class="fa fa-heart-o"></i></a>
+              </div><a class="ps-btn" href="product-standard.html#">Agregar al carro</a><a class="ps-product__favorite" href="product-standard.html#">
+                <!-- <i class="fa fa-heart-o"></i> -->
+              </a>
             </div>
    
           </div>
