--- a/src/app/components/testapp/testapp.component.html
+++ b/src/app/components/testapp/testapp.component.html
@@ -25,42 +25,7 @@
       </div>
     </div>
     <div id="homepage-1">
-      <div class="ps-home-banner">
-        <div class="ps-carousel--animate ps-carousel--1st">
-          <div class="item">
-            <div class="ps-banner left">
-              <div class="container"><img src="assets/assetslameseria/img/home-banner/home-1/1.png" alt="">
-                <div class="ps-banner__content">
-                  <h5>Spring - Summer 2018</h5>
-                  <h1>ZONA DE BANNERS</h1>
-                  <p>Duis aute irure dolor in reprehenderit in voluptate velit essecillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat nonproident</p><a class="ps-btn ps-btn--outline ps-btn--black" href="index.html#">Shop Now</a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="item">
-            <div class="ps-banner right">
-              <div class="container"><img src="assets/assetslameseria/img/home-banner/home-1/2.png" alt="">
-                <div class="ps-banner__content">
-                  <h5>2018 New Arrivals</h5>
-                <h1>ZONA DE BANNERS</h1>
-                  <p>Duis aute irure dolor in reprehenderit in voluptate velit essecillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat nonproident</p><a class="ps-btn ps-btn--outline ps-btn--black" href="index.html#">Shop Now</a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="item">
-            <div class="ps-banner center-1">
-              <div class="container"><img src="assets/assetslameseria/img/home-banner/home-1/3.png" alt="">
-                <div class="ps-banner__content">
-                  <h4>Summer 2018</h4>
-          <h1>ZONA DE BANNERS</h1><a class="ps-btn ps-btn--outline ps-btn--black" href="index.html#">Shop Now</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+      <app-banner></app-banner>
 
       <div class="ps-section ps-product-collection ps-trending">
         <div class="container">
