--- a/src/app/components/productdetail/productdetail.component.html
+++ b/src/app/components/productdetail/productdetail.component.html
@@ -39,6 +39,7 @@
             <h4 class="ps-product__price">CLP {{_uw.tixPreview.globalPrice}}</h4>
             <div class="ps-product__desc">
               <p>{{_uw.tixPreview.description}}</p>
+              <p><b>Dimensiones: </b> {{_uw.tixPreview.dimensiones}}</p>
             </div>
             <div class="ps-product__shopping">
               <div class="form-group--number">
