--- a/src/app/components/productdetail/productdetail.component.html
+++ b/src/app/components/productdetail/productdetail.component.html
@@ -46,9 +46,11 @@
                 <button class="up"><i class="fa fa-plus"></i></button>
                 <button class="down"><i class="fa fa-minus"></i></button>
                 <input class="form-control" type="text" placeholder="1">
-              </div><a class="ps-btn" href="product-standard.html#">Agregar al carro</a><a class="ps-product__favorite" href="product-standard.html#">
+              </div><a class="ps-btn" href="product-standard.html#">Agregar al carro</a>
+
+              <!-- <a class="ps-product__favorite" href="product-standard.html#"> -->
                 <!-- <i class="fa fa-heart-o"></i> -->
-              </a>
+              <!-- </a> -->
             </div>
    
           </div>
