--- a/src/app/components/productdetail/productdetail.component.html
+++ b/src/app/components/productdetail/productdetail.component.html
@@ -24,6 +24,11 @@
 
          
                 </div>
+               <!--  <div id="lightgallery">
+                   <a href="{{_uw.tixPreview.images[f]}}" *ngFor="let image of _uw.tixPreview.images; index as f">
+                      <img src="{{_uw.tixPreview.images[f]}}" />
+                  </a>
+                </div> -->
           
               </div>
             </figure>
@@ -65,3 +70,7 @@
         <input class="form-control" type="text" placeholder="1">
       </div><a class="ps-btn" href="product-standard.html#">Add to cart</a>
     </div>
+<!--     <script>
+   lightGallery(document.getElementById('lightgallery'));
+</script>
+ -->
